<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cse110.liveasy.Home1"
    android:id="@+id/fragment_home1">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cse110.liveasy.Home1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/main_profile_image1"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:onClick="toProfilePopup"/>

        <Button
            android:text="Create Group"
            android:layout_height="40dp"
            android:id="@+id/button_creategroup"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="goToCreateGroup"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
            android:layout_width="200dp" />

        <Button
            android:text="Join Group"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:id="@+id/JoinGroup"
            android:layout_below="@+id/button_creategroup"
            android:layout_alignLeft="@+id/button_creategroup"
            android:layout_alignStart="@+id/button_creategroup"
            android:layout_alignRight="@+id/button_creategroup"
            android:layout_alignEnd="@+id/button_creategroup"
            android:onClick="goToJoinGroup"
...
