<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110.liveasy.CreateGroup">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_marginTop="39dp"
        android:hint="Input Group Number"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/holo_blue_light" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:layout_below="@+id/editText6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="Join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_below="@+id/editText6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="joinGroup"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

        <Button
            android:text="Cancel"
            android:layout_width="match_parent"
            android:id="@+id/button10"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="cancelJoinGroup"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

    </LinearLayout>

</RelativeLayout>
